src/objects/Siva_TestObject__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>this object is created for field mapping testing</description>
    <label>SivaTestObject</label>
    <fields>
        <fullName>First_Name__c</fullName>
        <externalId>true</externalId>
        <label>First_Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>currency_data__c</fullName>
        <label>currency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>